<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailUser">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="60dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_photo"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                app:civ_border_color="#a2515151"
                app:civ_border_width="1dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="160dp"
                android:layout_marginRight="30dp"
                android:orientation="vertical"
                android:padding="22dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txt_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="13dp"
                        android:gravity="center"
                        android:text="@string/name"
                        android:textColor="@color/white"
                        android:textSize="20dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="13dp"
                        android:layout_marginRight="10dp"
                        android:gravity="center"
                        android:text="Username : "
                        android:textColor="@color/white"
                        android:textSize="15dp" />

                    <TextView
                        android:id="@+id/txt_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="13dp"
                        android:gravity="center"
                        android:text="@string/user_name"
                        android:background="@color/DarkGray"
                        android:textColor="@color/white"
                        android:textSize="15dp" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="13dp"
                        android:layout_marginRight="10dp"
                        android:gravity="center"
                        android:text="@string/followers"
                        android:textColor="@color/white"
                        android:textSize="17dp" />

                    <TextView
                        android:id="@+id/txt_followers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="13dp"
                        android:layout_marginRight="10dp"
                        android:gravity="center"
                        android:text="@string/followers"
                        android:textColor="@color/white"
                        android:textSize="17dp" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="13dp"
                        android:gravity="center"
                        android:text="@string/following"
                        android:textColor="@color/white"
                        android:textSize="17dp" />

                    <TextView
                        android:id="@+id/txt_following"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="13dp"
                        android:layout_marginRight="10dp"
                        android:gravity="center"
                        android:text="@string/following"
                        android:textColor="@color/white"
                        android:textSize="17dp" />


                </LinearLayout>



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:layout_marginRight="10dp"
                    android:gravity="center"
                    android:text="Working Place : "
                    android:textColor="@color/white"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/txt_company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:gravity="center"
                    android:text="@string/company"
                    android:textColor="@color/white"
                    android:textSize="16dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:layout_marginRight="10dp"
                    android:gravity="center"
                    android:text="My Location : "
                    android:textColor="@color/white"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/txt_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:gravity="center"
                    android:text="@string/location"
                    android:textColor="@color/white"
                    android:textSize="16dp" />



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="13dp"
                        android:layout_marginRight="10dp"
                        android:gravity="center"
                        android:text="@string/repository"
                        android:textColor="@color/white"
                        android:textSize="16dp" />

                    <TextView
                        android:id="@+id/txt_repository"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="13dp"
                        android:gravity="center"
                        android:text="@string/repository"
                        android:textColor="@color/white"
                        android:textSize="16dp" />

                </LinearLayout>


            </LinearLayout>


        </RelativeLayout>

    </ScrollView>

</RelativeLayout>